package G2L;

message AccountLogin {
	optional uint64 id = 1 [default=5632015];
	required string k_id = 2;
} // end

message ConcurrentUser {
	optional uint64 id = 1 [default=1634406];
	required uint32 ccu = 2;
} // end

message PeakConcurrentUser {
	optional uint64 id = 1 [default=15922294];
} // end

message UniqueVisitor {
	optional uint64 id = 1 [default=3600600];
	required uint32 uv = 2;
} // end

message RetentionRate {
	optional uint64 id = 1 [default=651571];
	required uint32 rr = 2;
} // end

message PayCharacter {
	optional uint64 id = 1 [default=6681968];
	required string k_id = 2;
	required int32 paid_character = 3;
	required int32 rest_coin = 4;
} // end

message PayCoin {
	optional uint64 id = 1 [default=10680691];
	required string k_id = 2;
	required int32 paid_coin = 3;
	required int32 rest_money = 4;
} // end

message PayEnergy {
	optional uint64 id = 1 [default=3667218];
	required string k_id = 2;
	required int32 paid_energy = 3;
	required int32 rest_coin = 4;
} // end

message PayItem {
	optional uint64 id = 1 [default=6682325];
	required string k_id = 2;
	required int32 paid_item = 3;
	required int32 rest_coin = 4;
} // end

message PayMoney {
	optional uint64 id = 1 [default=7664756];
	required string k_id = 2;
	required int32 paid_money = 3;
	required int32 rest_money =4;
} // end

message UserGamePlay {
	optional uint64 id = 1 [default=1703442];
	required string k_id = 2;
	required int32 selected_character = 3;
	required int32 score = 4;
	required int32 enemy_kill = 5;
	required int32 dist = 6;
	required int32 play_time = 7;
	required int32 exp_boost = 8;
	required int32 item_last = 9;
	required int32 shield = 10;
	required int32 ghostify = 11;
	required int32 immortal = 12;
	required int32 random = 13;
} // end

message UserRegister {
	optional uint64 id = 1 [default=16839580];
	required string k_id = 2;
} // end

message UserUnregister {
	optional uint64 id = 1 [default=1703457];
	required string k_id = 2;
} // end
